Update reset pasword link template.
- Forget href to can hyperlink when click link

--- a/src/common/templates/forget-password.template.ejs
+++ b/src/common/templates/forget-password.template.ejs
@@ -4,7 +4,7 @@
       Please use this link to reset your password.
 
       <div style="margin-top: 10px; margin-bottom: 10px">
-        <a style="color: cornflowerblue"><%= link %></a>
+        <a href="<%= link %>" style="color: cornflowerblue"><%= link %></a>
       </div>
 
       <div style="color: red; font-size: large">
